Bug 491713 - In dark mode Breeze icons are still dark and not light, so they are hardly visible. Change icon color to something light.
Summary: In dark mode Breeze icons are still dark and not light, so they are hardly vi...
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: bart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-14 12:44 UTC by kde
Modified: 2025-01-30 12:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kde 2024-08-14 12:44:55 UTC
SUMMARY


STEPS TO REPRODUCE
1. go to settings
2. go to appearance
3. change color theme to Dark Breeze

OBSERVED RESULT
Icons are hardly visible, because both background and icons themselves are dark.

EXPECTED RESULT
Color of icons are light and visible in dark mode.

SOFTWARE/OS VERSIONS
Windows: 10 22H2
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Kasts version 24.11.70
Comment 1 Bug Janitor Service 2025-01-29 21:16:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kasts/-/merge_requests/225
Comment 2 bart 2025-01-30 12:08:33 UTC
Git commit 0bbd895929369cba1bd92b5c9e0ca1fe52df0c5a by Bart De Vries, on behalf of Joshua Goins.
Committed on 30/01/2025 at 12:08.
Pushed by bdevries into branch 'master'.

Call KIconTheme::initTheme to fix icon recoloring on other platforms

This should fix icons and recoloring in general for other platforms,
like Windows.

Link: https://planet.kde.org/christoph-cullmann-2024-05-11-kde-applications-icons/

M  +1    -0    .kde-ci.yml
M  +1    -1    CMakeLists.txt
M  +1    -1    src/CMakeLists.txt
M  +3    -0    src/main.cpp

https://invent.kde.org/multimedia/kasts/-/commit/0bbd895929369cba1bd92b5c9e0ca1fe52df0c5a