Call KIconTheme::initTheme to fix icon recoloring on other platforms

This should fix icons and recoloring in general for other platforms,
like Windows.

Link: https://planet.kde.org/christoph-cullmann-2024-05-11-kde-applications-icons/

BUG: 491713